# MasterLegalDatabase

./: .gitattributes  .gitignore  AGENTS.md  CCR_BULK_READINESS_REPORT.md  CCR_DATASET_SCHEMA.md  CCR_ID_AND_STATE_MODEL.md  CCR_IMPLEMENTATION_COMPLETION_REPORT.md  CCR_INDUSTRY_FILTERING.md  CCR_NORMALIZED_OUTPUT.md  CCR_TEXT_NORMALIZATION.md  COLORADO_REGISTER_EDOCKET_PIPELINE.md  CRS_PIPELINE_READINESS_REPORT.md  IMPLEMENTATION_AUDIT_CCR.md  LEGISLATION_BULK_ACQUISITION_REPORT.md  LEGISLATION_DOCUMENT_DOWNLOAD_REPORT.md  LEGISLATION_PIPELINE_READINESS_REPORT.md  README.md  REGISTER_EXTRACTION_BUILD_REPORT.md  pyproject.toml  requirements.txt  run_pipeline.py
.githooks/: pre-push
.github/: PULL_REQUEST_TEMPLATE.md
01_Statutes_CRS/: crs_title_01.md  crs_title_02.md  crs_title_03.md  crs_title_04.md  crs_title_05.md  crs_title_06.md  crs_title_07.md  crs_title_08.md  crs_title_09.md  crs_title_10.md  crs_title_11.md  crs_title_12.md  crs_title_13.md  crs_title_14.md  crs_title_15.md  crs_title_16.md  crs_title_17.md  crs_title_18.md  crs_title_19.md  crs_title_20.md  crs_title_21.md  crs_title_23.md  crs_title_25.md  crs_title_25_5.md  crs_title_26.md  crs_title_26_5.md  crs_title_27.md  crs_title_28.md  crs_title_29.md  crs_title_30.md  crs_title_31.md  crs_title_32.md  crs_title_33.md  crs_title_34.md  crs_title_35.md  crs_title_36.md  crs_title_37.md  crs_title_38.md  crs_title_39.md  crs_title_40.md  (+4 more)
02_Regulations_CCR/: _index.jsonl  ccr_dept_board_of_equalization.md  ccr_dept_department_of_agriculture.md  ccr_dept_department_of_corrections.md  ccr_dept_department_of_early_childhood.md  ccr_dept_department_of_education.md  ccr_dept_department_of_health_care_policy_and_financing.md  ccr_dept_department_of_higher_education.md  ccr_dept_department_of_labor_and_employment.md  ccr_dept_department_of_law.md  ccr_dept_department_of_local_affairs.md  ccr_dept_department_of_military_and_veterans_affairs.md  ccr_dept_department_of_personnel_and_administration.md  ccr_dept_department_of_public_safety.md  ccr_dept_department_of_state.md  ccr_dept_department_of_transportation.md  ccr_dept_department_of_treasury.md  ccr_dept_independent_ethics_commission.md  ccr_dept_office_of_the_governor.md  ccr_dept_public_employees_retirement_board.md  ccr_dept_state_board_of_parole.md
05_Executive_Orders/: _index.jsonl
06_Session_Laws/: _index.jsonl
07_Supplementary/: _index.jsonl
08_County_Authorities/: _index.jsonl
09_District_Authorities/: _index.jsonl
10_Municipal_Authorities/: _index.jsonl
_CONTROL_PLANE/: AGENCY_REGISTRY.json  AI_ANSWER_CONTRACT.json  AI_QUERY_CONTRACT.json  AI_READINESS_REPORT.json  AI_READ_ORDER.json  AI_RETRIEVAL_CONTRACT.json  API_KEYS.example.json  BLOCKED_DOWNLOAD_QUEUE.json  CCR_COVERAGE_CLOSURE_PLAN.json  CORPUS_USABILITY_REPAIR_QUEUE.json  COUNTY_DATA_AUDIT.json  COUNTY_GAP_AUDIT.jsonl  COUNTY_LINKED_RETRY_REPORT.json  COUNTY_SEMANTIC_AUTOMATED_REVIEW.jsonl  COUNTY_SEMANTIC_AUTOMATED_REVIEW_SUMMARY.json  COUNTY_SEMANTIC_CANDIDATE_MAP.jsonl  COUNTY_SEMANTIC_CANDIDATE_MAP_SUMMARY.json  COUNTY_SEMANTIC_FINAL_REVIEW_SUMMARY.json  COUNTY_SEMANTIC_IMPROVEMENT_SUMMARY.json  COUNTY_SEMANTIC_REVIEW_SUMMARY.json  COUNTY_SOURCE_COVERAGE.json  CRS_OFFICIAL_REFRESH_CONFIRMATION.json  CRS_PUBLISHING_AUTHORIZATION.json  CURRENT_RULE_VERIFICATION.jsonl  DOWNLOAD_SAFETY_CHECKPOINT.json  EO_2019_007_RECOVERY_ATTEMPT.json  EXECUTIVE_ORDER_SOURCE_ANCHORING_REPORT.json  FRESHNESS_VERIFICATION_QUEUE.json  FULL_TEXT_DIFF.jsonl  FULL_TEXT_DIFF_SUMMARY.json  GOLDEN_SAMPLE_REVIEW_SET.jsonl  GOLDEN_SAMPLE_REVIEW_SET_REPORT.json  HUMAN_REVIEW_WORKFLOW_REPORT.json  LEGACY_WEB_SOURCE_AUTOMATION_SCHEDULE_2026-07-07.json  LEGACY_WEB_SOURCE_PROBE_REPORT_2026-07-07.json  LEGISCAN_LIVE_REFRESH_ATTEMPT.json  LEGISCAN_REPAIR_PROGRESS_DASHBOARD.json  LEGISCAN_SOURCE_FINDER_CHECKLIST.json  LOCAL_DOWNLOAD_MANIFEST.jsonl  LOCAL_GOLDEN_EVALUATION.json  (+70 more)
_CROSSWALKS/: agency_to_statute.jsonl  amendment_history.jsonl  bill_to_statute.jsonl  local_rule_to_state_authority.jsonl  regulation_to_statute.jsonl  rulemaking_to_regulation.jsonl  state_authority_to_local_rule.jsonl  statute_to_regulation.jsonl
_QUARANTINE/: local_extraction_quarantine.jsonl  quarantine_log.jsonl
docs/: CODEX_PHASE_PROMPTS.md  DEFECTS.md  DOWNLOAD_CLOSEOUT_CHECKLIST.md  GEODE_35_IMPROVEMENT_COMPLETION_REPORT.md  GEODE_API_ACCESS_DESIGN.md  GEODE_API_KEY_SYSTEM_AUDIT.md  GEODE_COMMONS_IMPLEMENTATION_PLAN.md  GEODE_COMPLETION_REPORT.md  GEODE_PRODUCT_CURRENT_STATE_AUDIT.md  GEODE_PRODUCT_EXECUTION_PLAN.md  GEODE_REVIEWER_SOP.md  GEODE_STEP1_READINESS_STATUS.md  GEODE_SYSTEM_DESIGN.md  GIT_CHECKPOINT_EXECUTION_PLAN.md  MANUAL_SOURCE_INTAKE.md  NEXT_DOWNLOAD_DASHBOARD.md  PILOT_TEST_SET.md  PUBLICATION_CHECKLIST.md  SECRET_SAFETY_CHECK.md  design-principles.md
geode/: __init__.py  constants.py  freshness_report.py  integrity_check.py  validate.py
prompts/: decomposition_prompt.md
schemas/: bill_schema.json  committee_lookup.json
scripts/: __init__.py  bill_parser.py  diagnose_fetch.py  entity_extractor.py  extractor.py  formatter.py  generate_sample_data.py  graph_builder.py  industry_tagger.py  scraper.py  validator.py
taxonomies/: committee_to_naics.json  crs_title_map.json  keyword_to_naics.json  naics_hierarchy.json
tests/: __init__.py  conftest.py  test_api_access.py  test_archive_paths.py  test_audit_artifacts.py  test_automated_county_review.py  test_bulk_download_cli.py  test_ccr_bulk.py  test_ccr_dataset.py  test_ccr_industry_filter.py  test_ccr_pipeline.py  test_ccr_postprocess.py  test_ccr_scraper.py  test_ccr_text_normalization.py  test_change_tracking.py  test_conditional_evidence.py  test_context_safety.py  test_conversion.py  test_converter_dispatch.py  test_corpus_usability_audit.py  test_county_critical_repairs.py  test_county_data_audit.py  test_county_semantic_final_review.py  test_county_semantic_improvement.py  test_county_semantic_mapping.py  test_county_semantic_review.py  test_critique.py  test_crs_bulk.py  test_download_closeout.py  test_exec_orders_source_anchoring.py  test_extractors.py  (+66 more)
(+4394 files in other folders)
