[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geode"
version = "0.1.0"
description = "AI-first Colorado legal corpus ingestion and validation backend."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.34.0",
    "httpx>=0.27.0",
    "markitdown>=0.0.1a3",
    "openai>=1.40.0",
    "orjson>=3.10.0",
    "pydantic>=2.0",
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5.0",
]
scraping = [
    "curl_cffi>=0.7.0",
    "cloudscraper>=1.2.71",
]

[project.scripts]
geode-validate = "geode.validate:main"
geode-integrity-check = "geode.integrity_check:main"
geode-pipeline-run = "geode.pipeline.run:main"
geode-freshness-report = "geode.freshness_report:main"

[tool.setuptools.packages.find]
include = ["geode*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
branch = true
source = ["geode"]

[tool.coverage.report]
show_missing = true
skip_covered = true
