[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geode"
version = "0.1.0"
description = "Backend-only Colorado regulatory intelligence knowledge and orchestration system for AI agents."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.34.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
    "jsonschema>=4.0.0",
    "markitdown[docx,pdf]>=0.0.1a3",
    "networkx>=3.0",
    "openai>=1.40.0",
    "orjson>=3.10.0",
    "pydantic>=2.0",
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5.0",
]
api = [
    "alembic>=1.13",
    "fastapi>=0.111.0",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.30.0",
]
scraping = [
    "curl_cffi>=0.7.0",
    "cloudscraper>=1.2.71",
]

[project.scripts]
geode-validate = "geode.validate:main"
geode-integrity-check = "geode.integrity_check:main"
geode-pipeline-run = "geode.pipeline.run:main"
geode-freshness-report = "geode.freshness_report:main"
geode-bulk-download = "geode.connectors.run:main"
geode-ccr-bulk = "geode.connectors.ccr_bulk:main"
geode-ccr-dataset = "geode.connectors.ccr_dataset:main"
geode-ccr-filter = "geode.connectors.ccr_industry_filter:main"
geode-ccr-text = "geode.pipeline.ccr_text:main"
geode-register-pipeline = "geode.connectors.register_pipeline:main"
geode-legislation-pipeline = "geode.connectors.legiscan_pipeline:main"
geode-legislation-documents = "geode.connectors.legiscan_documents:main"
geode-search-index = "geode.search.index:main"
geode-manual-source-intake = "geode.pipeline.manual_source_intake:main"
geode-secret-safety = "geode.validation.secret_safety:main"
geode-download-closeout = "geode.pipeline.download_closeout:main"
geode-recent-download-audit = "geode.pipeline.recent_download_audit:main"
geode-rulemaking-search-verification = "geode.pipeline.rulemaking_search_verification:main"
geode-rulemaking-prompt-comparison = "geode.pipeline.rulemaking_prompt_comparison:main"
geode-official-source-check = "geode.pipeline.official_source_checker:main"
geode-county-semantic-review = "geode.pipeline.county_semantic_review:main"
geode-county-semantic-improvement = "geode.pipeline.county_semantic_improvement:main"
geode-county-semantic-final-review = "geode.pipeline.county_semantic_final_review:main"
geode-county-automated-review = "geode.pipeline.automated_county_review:main"
geode-api = "geode.api.app:main"
geode-api-admin = "geode.api.admin:main"

[tool.setuptools.packages.find]
include = ["geode*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
branch = true
source = ["geode"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.mypy]
python_version = "3.11"
files = [
    "geode/api",
    "geode/net",
    "geode/orchestration",
    "geode/schemas",
    "geode/search",
    "geode/utils",
]
exclude = [
    "geode/web",
]
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
no_implicit_optional = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "fastapi",
    "fastapi.*",
    "uvicorn",
]
ignore_missing_imports = true
